# setodo

./: Cargo.toml
src/: app.rs  cmd.rs  data.rs  main.rs  tree.rs  ui.rs
src/ui/: central_panel.rs  tree_view.rs
