[package]
name = "setodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.0", default-features=false, features = ["persistence", "glow", "x11"] }
rmp-serde = "1.1.2"
dirs-sys = "0.4.1"
open = "5.0.1"
zstd = "0.13.0"
egui-phosphor = "0.5.0"
egui-fontcfg = { git = "https://github.com/crumblingstatue/egui-fontcfg.git" }
existing_instance = { git = "https://github.com/crumblingstatue/rust-existing-instance.git" }
constcat = "0.5.0"
argwerk = "0.20.4"
egui-modal = "0.3.6"

[dependencies.serde]
version = "1.0.195"
features = ["derive"]

[dependencies.egui_commonmark]
git = "https://github.com/lampsitter/egui_commonmark.git"
default-features = false
features = ["pulldown_cmark"]

[dependencies.egui-file-dialog]
git = "https://github.com/fluxxcode/egui-file-dialog.git"
branch = "develop"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
