[package]
name = "setodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.29.0", default-features=false, features = ["persistence", "glow", "x11"] }
rmp-serde = "1.1.2"
dirs-sys = "0.4.1"
open = "5.0.1"
zstd = "0.13.0"
egui-phosphor = { git = "https://github.com/crumblingstatue/egui-phosphor.git", branch = "egui-0.29" }
egui-fontcfg = { git = "https://github.com/crumblingstatue/egui-fontcfg.git" }
existing_instance = { git = "https://github.com/crumblingstatue/rust-existing-instance.git" }
constcat = "0.5.0"
argwerk = "0.20.4"
egui-modal = { git = "https://github.com/crumblingstatue/egui-modal.git", branch = "egui-0.29" }
egui_extras = { version = "0.29.0", features = ["serde"] }

[dependencies.serde]
version = "1.0.195"
features = ["derive"]

[dependencies.egui_commonmark]
version = "0.18"
default-features = false
features = ["pulldown_cmark"]

[dependencies.egui-file-dialog]
git = "https://github.com/crumblingstatue/egui-file-dialog.git"
branch = "egui-0.29"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
